--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="slider_off">#C4C4C4</color>
     <color name="thumb">#FAFAFA</color>
     <color name="blue">#76CEF3</color>
+    <color name="search">#67E4A1</color>
 </resources>
