--- a/app/src/main/res/layout/switch_item.xml
+++ b/app/src/main/res/layout/switch_item.xml
@@ -1,12 +1,16 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:background="@color/Dark_Blue_15">
 
     <Switch
         android:id="@+id/mySwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:checked="true"
+        android:gravity="center"
+        android:theme="@style/MySwitch"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 </RelativeLayout>
