--- a/app/src/main/res/layout/visible_item.xml
+++ b/app/src/main/res/layout/visible_item.xml
@@ -10,5 +10,5 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:padding="12dp"
-        app:srcCompat="@drawable/menu2_visible" />
+        app:srcCompat="@drawable/ic_visible" />
 </FrameLayout>
